bluec-tests/tests/invalid/types_bool/static_init.c
_Bool b1 = 1;
_Bool b2 = !b1;

int main(void) {
    return b;
}